# MangaAIRepairerBackend

./: .gitignore  README.md  app.py  build.bat  manga_ai_repairer_backend.spec  pyproject.toml  注册表修复（安装）.bat
manga-ai-repairer-backend/: 注册表修复（安装）.bat
